<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isGroupNameEmpty"
            type="androidx.databinding.ObservableBoolean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="250dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/attachmentText"
                    style="@style/Dialog_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/add_attachment"
                    app:layout_constraintBottom_toBottomOf="@+id/closeDialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/closeDialog" />

                <ImageView
                    android:id="@+id/closeDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/img_close" />

                <ImageView
                    android:id="@+id/fileOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fileoption"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/attachmentText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/attachmentText"
                    android:contentDescription="@string/file_option"
                    />

                <ImageView
                    android:id="@+id/cameraOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/cameraoption"
                    app:layout_constraintEnd_toStartOf="@id/albumOption"
                    app:layout_constraintStart_toEndOf="@+id/fileOption"
                    app:layout_constraintTop_toBottomOf="@id/attachmentText"
                    android:contentDescription="@string/camera_option"/>

                <ImageView
                    android:id="@+id/albumOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/albumoption"
                    android:layout_margin="32dp"
                    app:layout_constraintTop_toBottomOf="@id/attachmentText"
                    app:layout_constraintStart_toEndOf="@id/cameraOption"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/album_option"
                  />

                <ImageView
                    android:id="@+id/audioOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/audio_option"
                    android:layout_margin="32dp"
                    app:layout_constraintTop_toBottomOf="@id/fileOption"
                    app:layout_constraintStart_toStartOf="@id/fileOption"
                    app:layout_constraintEnd_toEndOf="@id/fileOption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/audio_option"/>

                <ImageView
                    android:id="@+id/locationOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/locationoption"
                    android:layout_margin="32dp"
                    app:layout_constraintTop_toBottomOf="@id/cameraOption"
                    app:layout_constraintStart_toStartOf="@id/cameraOption"
                    app:layout_constraintEnd_toEndOf="@id/cameraOption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/location_option"/>

                <ImageView
                    android:id="@+id/contactOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/contactoption"
                    android:layout_margin="32dp"
                    app:layout_constraintTop_toBottomOf="@id/albumOption"
                    app:layout_constraintStart_toStartOf="@id/albumOption"
                    app:layout_constraintEnd_toEndOf="@id/albumOption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/contact_option"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>