<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="messageText"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="disableButton"
            type="androidx.databinding.ObservableBoolean" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

       <EditText
        android:id="@+id/edtMessage"
        style="@style/Toolbar_Message_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/type_MessageHint"
        android:text="@={messageText}"
        android:autofillHints="null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/galleryImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_gallery"
                android:layout_marginStart="10dp"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/img_gallery" />

            <ImageView
                android:id="@+id/optionMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_optionmenu"
                android:padding="12dp"
                app:layout_constraintStart_toEndOf="@id/galleryImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/img_option_menu" />

            <TextView
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/img_sendbutton"
                android:layout_marginEnd="12dp"
                android:padding="4dp"
                android:clickable="@{disableButton ? false : true}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/img_send_button"
                android:backgroundTint="@{disableButton ? @color/grayish_3 : @color/tile_green_dark}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>