<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="250dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_caution_red"
                    android:contentDescription="@string/img_caution"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dialogHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular_400"
                    android:gravity="center"
                    android:text="@string/permission_dialog_header"
                    android:textColor="@color/grayish_black"
                    android:textSize="14sp"
                    android:layout_margin="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_close" />

                <TextView
                    android:id="@+id/dialogContent"
                    style="@style/Dialog_TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/permission_dialog_content"
                    app:layout_constraintEnd_toEndOf="@+id/dialogHeader"
                    app:layout_constraintStart_toStartOf="@+id/dialogHeader"
                    app:layout_constraintTop_toBottomOf="@id/dialogHeader" />

                <Button
                    android:id="@+id/btnGrantPermissions"
                    style="@style/Theme_Button_Activated"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/grant_permissions"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/dialogContent"
                    app:layout_constraintStart_toStartOf="@+id/dialogContent"
                    app:layout_constraintTop_toBottomOf="@id/dialogContent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>