<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="userEmail"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="username"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="password"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="userNameEntered"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="userEmailEntered"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="passwordEntered"
            type="androidx.databinding.ObservableBoolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theme_gradient">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:src="@drawable/logo_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/groupView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="36dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_signText"
                    style="@style/Theme_TextView_Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="34dp"
                    android:text="@string/sign_up_to_your_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtUserName"
                    style="@style/Theme_Accounts_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="38dp"
                    android:hint="@string/userNameHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:text="@={username}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signText" />

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/Theme_Accounts_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/userEmailHint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={userEmail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/Theme_Accounts_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:hint="@string/passwordHint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="14"
                    android:text="@={password}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/Theme_Button_Activated"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup"
                    android:enabled="@{userEmailEntered &amp;&amp; userNameEntered &amp;&amp; passwordEntered ? true:false, default = false}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/Theme_Button_Transparent"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/signIn"
                    app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
                    app:layout_constraintStart_toStartOf="@+id/btnSignUp"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>